# 2022-vision

./: README.md
camera-calibration/: Makefile  README.md  calibrate.py  depth-calib  depth-calib.cpp  flir-calib  flir-calib.cpp  flir-data.txt  get_images.sh  intel-data.txt
depth-camera-tests/: BGR_sample  IR_sample  IR_sample.cpp  Makefile  README.md  april_depth  april_depth.cpp  april_logi  april_logi.cpp  file.txt  get_camera_props  get_camera_props.cpp  stream  stream.cpp
dumb-obj-detect-tests/: Cameras.h  depthCamera.cpp  main.cpp  meson.build  tune.cpp
flir-camera-tests/: Makefile  README.md  flir-test  flir-test.cpp
pose-estimation-tests/: Makefile  README.md  logi_pose  logi_pose.cpp
reflective-tape-tests/: Cameras.h  depthCamera.cpp  main.cpp  main.h  meson.build
vision/: 1ft.csv  Cameras.h  depthCamera.cpp  detection.cpp  detection.h  flirCamera.cpp  graphics_helpers.cpp  graphics_helpers.h  main.cpp  main.h  meson.build  pose_estimation.cpp  pose_estimation.h  usbCamera.cpp
